--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+language: generic
+sudo: required
+
 service:
   docker
 
@@ -5,7 +8,7 @@ before_install:
   - docker build -t oopjot/pizza-app -f Dockerfile .
 
 script:
-  - docker run oopjot/pizza-app npm run test
+  - docker run -e CI=true oopjot/pizza-app npm run test
 
 # after_success:
 #   - docker build -t oopjot/pizza-app .
