--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
-language: generic
+language: node_js
 sudo: required
 
-service:
+services:
   docker
 
 before_install:
-  - docker build -t oopjot/pizza-app -f Dockerfile .
+  - docker build -t oopjot/pizza-app .
 
 script:
-  - docker run -e CI=true oopjot/pizza-app npm run test
+  - npm test
+  - npm run build
 
 # after_success:
 #   - docker build -t oopjot/pizza-app .
