--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: node_js
 sudo: required
+node_js: 14
 
 services:
   docker
 
-before_install:
-  - docker build -t oopjot/pizza-app .
 
 script:
-  - npm test
-  - npm run build
-
+  - docker build -f Dockerfile -t pizza .
 # after_success:
 #   - docker build -t oopjot/pizza-app .
