--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ node_js: 14
 services:
   docker
 
-
 script:
+  - docker build -f Dockerfile.dev -t pizza-dev .
   - docker build -f Dockerfile -t pizza .
-# after_success:
-#   - docker build -t oopjot/pizza-app .
