--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
-FROM node:alpine AS builder
+FROM node:alpine
 WORKDIR /opt/pizza-app
 COPY package.json .
 RUN yarn install
 COPY . .
-RUN yarn start
-EXPOSE 3000
+CMD [ "yarn", "start" ]
+
